--- a/Northwind.UI.Web/Northwind.UI.Web.csproj
+++ b/Northwind.UI.Web/Northwind.UI.Web.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-    <PackageReference Include="PagedList.Mvc" Version="4.5.0" />
+    <PackageReference Include="PagedList.Core.Mvc" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
