fix identity server

--- a/Northwind.Api/appsettings.json
+++ b/Northwind.Api/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "connectionString": {
-    "NorthDBConectionString": "Data Source=7BRNYQ1;Initial Catalog=NORTHWND;Persist Security Info=True;User ID=sa;Password=wilson11"
+    "NorthDBConectionString": "Data Source=GDSDW12;Initial Catalog=NORTHWND;Persist Security Info=True;User ID=sa;Password=wilson11"
   }
 }
