--- a/Northwind.IDP/appsettings.json
+++ b/Northwind.IDP/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
+    "identityServerdataDBConnectionString": "Data Source=GDSDW12;Initial Catalog=NorthwindIdentityServerDataDB;User ID=sa;Password=wilson11;MultipleActiveResultSets=true",
     "NorthwindConnection": "Data Source=GDSDW12;Initial Catalog=NorthwindUserDB;User ID=sa;Password=wilson11;MultipleActiveResultSets=true"
   }
 }
