--- a/Northwind.IDP/Northwind.IDP.csproj
+++ b/Northwind.IDP/Northwind.IDP.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.0.2" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -19,6 +15,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
+    <PackageReference Include="Node" Version="1.0.0" />
+    <PackageReference Include="Npm" Version="3.5.2" />
+    <PackageReference Include="vue" Version="2.5.2" />
   </ItemGroup>
 
 </Project>
