--- a/Northwind.IDP/appsettings.json
+++ b/Northwind.IDP/appsettings.json
@@ -2,5 +2,9 @@
   "ConnectionStrings": {
     "identityServerdataDBConnectionString": "Data Source=GDSDW12;Initial Catalog=NorthwindIdentityServerDataDB;User ID=sa;Password=wilson11;MultipleActiveResultSets=true",
     "NorthwindConnection": "Data Source=GDSDW12;Initial Catalog=NorthwindUserDB;User ID=sa;Password=wilson11;MultipleActiveResultSets=true"
+  },
+  "BotDetect": {
+    "HelpLinkEnabled": true,
+    "HelpLinkMode": "image"
   }
 }
