--- a/Web_Identity/appsettings.json
+++ b/Web_Identity/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConecction": "Data Source=GDSDW12;Initial Catalog=IdentityDB;Persist Security Info=True;User ID=wfernandez;Password=wilson11"
+    "DefaultConecction": "Data Source=GDSDW12;Initial Catalog=IdentityDB;Persist Security Info=True;User ID=wfernandez;Password=wilson11",
+    "NorthwindConecction": "Data Source=GDSDW12;Initial Catalog=NORTHWND;Persist Security Info=True;User ID=wfernandez;Password=wilson11"
   }
-  
 }
