--- a/Northwind_Web/packages.config
+++ b/Northwind_Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -29,9 +30,16 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="MvcBreadCrumbs" version="0.69" targetFramework="net461" />
+  <package id="MvcSiteMapProvider.MVC5" version="4.6.22" targetFramework="net461" />
+  <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.22" targetFramework="net461" />
+  <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
   <package id="vue" version="2.5.13" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
